# JustTransfer-Backend

./: .env  .env.sample  .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-compose.yaml
.github/workflows/: docker-publish.yml
files/: 4bef2a7a-ef30-48c5-b961-51043c69ee63  5feb50f9-fb5d-4758-abb0-c5d4637888f5
img/: jujutransfer.drawio
migrations/2025-09-06-101919_initial_migration/: up.sql
src/: api_handlers.rs  api_handlers_anonymous.rs  api_handlers_auth.rs  consts.rs  database.rs  error.rs  lib.rs  main.rs  models.rs  schema.rs  server.rs  tests.rs
src/api_handlers/: anonymous.rs  auth.rs  connected.rs  misc.rs
src/server/: anonymous.rs  connected.rs  cron.rs  init.rs  mail.rs
traefik/: traefik.yaml
