[package]
name = "JustTransfer"
version = "0.1.0"
edition = "2021"

[dependencies]

# Security and cryptography
libsodium-sys-stable = "1.23.2"
argon2 = "0.6.0-rc.7"
opaque-ke = { version = "4.1.0-pre.1", features = ["ristretto255", "argon2"] }
sha2 = "0.10.9"
rand = "0.8.5"

# Web framework and related libraries
axum = { version = "0.8.6", features = ["multipart", "tokio", "macros"]}
axum-extra = { version = "0.12.5", features = ["cookie"]}
http = "1.4.0"
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
jsonwebtoken = { version = "10.3.0", features = ["aws_lc_rs"] }

# Database and environment management
dotenvy = "0.15"
diesel = { version = "2.3.6", features = ["postgres", "r2d2", "chrono", "uuid"] }
tower-http = { version = "0.6.8", features = ["cors", "trace"] }
aws-sdk-s3 = "1.122.0"

# Other utilities
base64 = "0.22.1"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde"] }
