[package]
name = "JustTransfer"
version = "0.1.0"
edition = "2021"

[dependencies]

# Security and cryptography
libsodium-sys-stable = "1.23.2"
argon2 = "0.6.0-rc.7"
opaque-ke = { version = "4.1.0-pre.1", features = ["ristretto255", "argon2"] }
sha2 = "0.10.9"
rand = "0.8.5"

# Web framework and related libraries
axum = { version = "0.8.6", features = ["multipart", "tokio", "macros"]}
http = "1.4.0"
tower = { version = "0.5.2", features = ["timeout"] }
tower-http = { version = "0.6.8", features = ["cors", "trace", "catch-panic"] }
serde = { version = "1.0.219", features = ["derive"] }
tokio = { version = "1.49.0", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
tracing = "0.1.41"
tracing-subscriber = "0.3.22"
tower-sessions = "0.14.0"
urlencoding = "2.1.3"

# Database and environment management
once_cell = "1.21.3"
diesel = { version = "2.3.6", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = "2.3.1"
aws-sdk-s3 = "1.122.0"

# Email sending
lettre = "0.11.19"

# Other utilities
base64 = "0.22.1"
uuid = { version = "1.20.0", features = ["v4", "serde"] }
chrono = { version = "0.4.43", features = ["serde", "clock"] }
thiserror = "2"