[package]
name = "JustTransfer"
version = "0.1.0"
edition = "2021"

[dependencies]

# Security and cryptography
libsodium-sys-stable = "1.24.0"
argon2 = "0.6.0-rc.8"
opaque-ke = { version = "4.1.0-pre.2", features = ["ristretto255", "argon2"] }
sha2 = "0.10.9"

# Web framework and related libraries
axum = { version = "0.8.9", features = ["multipart", "tokio", "macros"]}
http = "1.4.2"
tower = { version = "0.5.3", features = ["timeout"] }
tower-http = { version = "0.7.0", features = ["cors", "trace", "catch-panic"] }
serde = { version = "1.0.228", features = ["derive"] }
tokio = { version = "1.52.3", features = ["full"] }
validator = { version = "0.20.0", features = ["derive"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
tower-sessions = "0.15.0"
urlencoding = "2.1.3"

# Database and environment management
once_cell = "1.21.4"
diesel = { version = "2.3.10", features = ["postgres", "r2d2", "chrono", "uuid"] }
diesel_migrations = "2.3.2"
aws-sdk-s3 = "1.137.0"

# Email sending
lettre = "0.11.22"

# Other utilities
base64 = "0.22.1"
uuid = { version = "1.23.4", features = ["v4", "serde"] }
chrono = { version = "0.4.45", features = ["serde", "clock"] }
thiserror = "2"